--- a/React/package.json
+++ b/React/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@coreui/bootstrap-react": "^1.0.0-beta.0",
     "axios": "^1.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
