--- a/React/package.json
+++ b/React/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@coreui/bootstrap-react": "^1.0.0-beta.0",
     "axios": "^1.3.3",
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1"
