--- a/React/package.json
+++ b/React/package.json
@@ -12,6 +12,7 @@
     "@coreui/bootstrap-react": "^1.0.0-beta.0",
     "axios": "^1.3.3",
     "bootstrap": "^5.3.0-alpha1",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1"
